--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -6,11 +6,12 @@
 
         <title>Jasmine tests</title>
 
-        <link rel="stylesheet" type="text/css" href="../../bower_componenets/jasmine/lib/jasmine-core/jasmine.css">
+        <link rel="stylesheet" type="text/css" href="../../bower_components/jasmine/lib/jasmine-core/jasmine.css">
 
-        <script type="text/javascript" src="../../bower_componenets/jasmine/lib/jasmine-core/jasmine.js"></script>
-        <script type="text/javascript" src="../../bower_componenets/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-        <script type="text/javascript" src="../../bower_componenets/jasmine/lib/jasmine-core/boot.js"></script>
+        <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
+        <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+        <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
+        <script type="text/javascript" src="../../src/hitbox.js"></script>
         <script type="text/javascript" src="../spec.js"></script>
     </head>
     <body>
