--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -11,6 +11,8 @@
         <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
         <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
         <script type="text/javascript" src="../../bower_components/jasmine/lib/jasmine-core/boot.js"></script>
+        <script type="text/javascript" src="../../bower_components/sinon/sinon_prebuilt.js"></script>
+
         <script type="text/javascript" src="../../src/hitbox.js"></script>
         <script type="text/javascript" src="../spec.js"></script>
     </head>
